# mpp_project

./: readme.txt
mpp/: codecs.cmake  mpi.cpp  version.h
mpp/codec/: CMakeLists.txt  mpp_parser.cpp
mpp/codec/dec/: CMakeLists.txt
mpp/codec/dec/rmvb/: CMakeLists.txt  rmvbd_parser.c  rmvbd_parser.h
mpp/codec/inc/: mpp_enc.h  rmvbd_api.h
mpp/common/: rmvbd_syntax.h
mpp/hal/: CMakeLists.txt  mpp_hal.cpp
mpp/hal/inc/: hal_rmvbd_api.h
mpp/hal/vpu/: CMakeLists.txt
mpp/hal/vpu/rmvbd/: CMakeLists.txt  hal_rmvbd_reg.c  hal_rmvbd_reg.h
mpp/legacy/: vpu_api_legacy.cpp
